prevent header button from stretching

--- a/style.css
+++ b/style.css
@@ -161,15 +161,6 @@ body {
   grid-template-rows: repeat(2, min-content);
 }
 
-.header-button {
-  background-color: rgb(30, 102, 245);
-  padding: 0.7rem 1rem;
-  border-radius: 2rem;
-  text-align: center;
-  cursor: pointer;
-  color: white;
-}
-
 .header-top-left {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
@@ -216,6 +207,17 @@ body {
 
   align-items: center;
   justify-content: end;
+}
+
+.header-button {
+  background-color: rgb(30, 102, 245);
+  padding: 0.7rem 1rem;
+  border-radius: 2rem;
+  width: min-content;
+  height: min-content;
+  text-align: center;
+  cursor: pointer;
+  color: white;
 }
 
 .header-button:hover {
